# fd-badcat-v2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REPRODUCTION.md  __init__.py  act_executor.py  decider.py  latency_estimates.py  module_adapter.py  offline_runner.py  package-lock.json  pyproject.toml  pytest.ini  tools.py  validate_audio_clock_system.sh  指导.md
configs/: eval.env.example  qwen3_omni_audio_single_gpu.yaml  qwen3_omni_text_only.yaml
docs/: engine_b_spec.md  fdbv3_memo.md  latency_calibration.md  phase_b_integration.md  phase_b_summary.md  prompt_v3_five_targets.md  rb_design.md  rb_test_protocol.md  w1_equivalence.md  w1_equivalence_data.json  w1_freeze_data.json  w1_freeze_real.json  w1_report.md  w2_rerun_report.md  w3_d1_memo.md  w3_d456_handoff.md  w3_ledger.md  w4_ladder_design.md  w4v3_design.md  w5_specgate_design.md  w6_admission_design.md
prompts/: ack_phrases.txt  revision_templates.txt
rb/: __init__.py  audio.py  generator.py  grammar.py  learned.py  registry.py  sandbox.py  scorer.py  simulator.py
scripts/: batch_replay.py  benchmark_ack_latency.py  check_services.sh  evaluate_humdial_100.py  extract_vad_events.py  fast_transcribe.py  fdb_pass_judge_strict.py  hf_aria2_download.py  measure_freeze.py  mock_equivalence.py  patch_index_tts_vllm.py  patch_prometheus_instrumentator.py  rb_adm11_counterfactual.py  rb_build.py  rb_commit_judge.py  rb_content_gen.py  rb_golden_manifest.py  rb_run.py  replay_session.py  run_fdb_with_deepseek.sh  run_humdial_100_pipeline.py  run_humdial_batch.py  run_humdial_smoke.sh  (+34 more)
(+18538 files in other folders)
