[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tact-fdb"
version = "0.1.0"
description = "TACT transaction/action-track integration for FDB-v3 and fd-badcat."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "soundfile",
  "requests",
]

[tool.setuptools]
packages = ["tact"]

[tool.setuptools.package-dir]
tact = "."
